<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DienstplanLogin</string>
    <string name="action_settings">Settings</string>
    <string name="counter">3</string>
    <string name="page">Login</string>
 	<string name="username">Email:</string>
   <string name="password">Passwort:</string>
   <string name="Login">Login</string>
   <string name="attempts">Attempts Left:</string>
   <string name="monday">Mo</string>
   <string name="tuesday">Di</string>
   <string name="thirsday">Do</string>
   <string name="wednesday">Mi</string>
   <string name="frieday">Fr</string>
   <string name="saturday">Sa</string>
   <string name="sunday">So</string>
</resources>
